--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: jxnl.co
 site_author: Jason Liu
 site_description: >-
-  Notes from my consulting work and other things I find interesting.
+  Notes about my hobbies and other things I find interesting.
 repo_name: blog
 repo_url: https://github.com/jxnl/blog/
 site_url: https://jxnl.github.io/blog/
