--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -122,6 +122,7 @@ markdown_extensions:
 nav:
   - Home: 
     - Introductions: 'index.md'
+    - Books: 'books.md'
   - Writing:
     - "writing/index.md"
   - Contact: 'contact.md'
