--- a/docs/writing/.authors.yml
+++ b/docs/writing/.authors.yml
@@ -9,3 +9,8 @@ authors:
     description: Contributor
     avatar: https://pbs.twimg.com/profile_images/1524186822389026816/sWRHRIkY_400x400.jpg
     url: https://twitter.com/intent/follow?screen_name=ivanleomk
+  jo:
+    name: Joseph Gleasure
+    description: Editor
+    avatar: https://ca.slack-edge.com/T058B1JB5GC-U06JVP9SBBL-b3b910ded4dd-192
+    url: https://josephgleasure.com/
