fix: image for jo

--- a/docs/writing/.authors.yml
+++ b/docs/writing/.authors.yml
@@ -12,5 +12,5 @@ authors:
   jo:
     name: Joseph Gleasure
     description: Editor
-    avatar: https://ca.slack-edge.com/T058B1JB5GC-U06JVP9SBBL-b3b910ded4dd-192
+    avatar: https://i.imgur.com/wO6erNq.jpeg
     url: https://josephgleasure.com/
