--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,7 +127,7 @@ nav:
     - Books: 'books.md'
   - Writing:
     - "writing/index.md"
-  - Consulting Servicesq:
+  - Consulting Services:
     - How to work with me: "services.md"
   - Contact: 'contact.md'
   
