--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -185,6 +185,7 @@ extra:
       link: https://github.com/jxnl
 extra_javascript:
   - javascripts/mathjax.js
+  - javascripts/analytics.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 copyright: Copyright &copy; 2023 Jason Liu
