--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ site_description: >-
   Notes about my hobbies and other things I find interesting.
 repo_name: blog
 repo_url: https://github.com/jxnl/blog/
-site_url: https://jxnl.github.io/blog/
+site_url: https://jxnl.co/
 edit_uri: edit/main/docs/
 copyright: Copyright &copy; 2024 Jason Liu 
 theme:
