--- a/docs/writing/.authors.yml
+++ b/docs/writing/.authors.yml
@@ -15,7 +15,7 @@ authors:
     avatar: https://i.imgur.com/wO6erNq.jpeg
     url: https://josephgleasure.com/
   eugene:
-    name: Eugene Yang
+    name: Eugene Yan
     description: Writer
     avatar: https://pbs.twimg.com/profile_images/1651817216629960706/lw4ZsN8u_400x400.jpg
     url: https://eugeneyan.com/
