--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -139,7 +139,7 @@ nav:
 plugins:
   - redirects:
       redirect_maps:
-         jobs.md: https://567-labs.notion.site/Jason-Liu-s-AI-Job-Board-2434ce1b4cb9443dad60e0d578133135?pvs=4
+         jobs.md: https://applied-llm-jobs.super.site/
   - social
   - search:
       separator: '[\s\u200b\-_,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
