--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -125,10 +125,13 @@ markdown_extensions:
 nav:
   - Home: 
     - Introductions: 'index.md'
-    - Applied AI Consulting Services: "services.md"
     - Investments: "investments.md"
     - User Manual: "user_manual.md"
     - Books: 'books.md'
+  - Consulting:
+    - Consulting Services: "services.md"
+    - Jump on a Call: "expert-calls.md"
+    - Experts and Vendors: "experts-and-vendors.md"
   - AI Engineering Job Board: "https://jobs.applied-llms.org"
   - Learn to Improve Your RAG: "systematically-improve-your-rag.md"
   - Writing:
