Update .authors.yml to include Skylar

--- a/docs/writing/.authors.yml
+++ b/docs/writing/.authors.yml
@@ -19,3 +19,8 @@ authors:
     description: Writer
     avatar: https://pbs.twimg.com/profile_images/1651817216629960706/lw4ZsN8u_400x400.jpg
     url: https://eugeneyan.com/
+  skylar:
+    name: Skylar Payne
+    description: Leader
+    avatar: https://skylarbpayne.com/assets/images/profilepic.jpg
+    url: https://skylarbpayne.com/
