--- a/docs/writing/.authors.yml
+++ b/docs/writing/.authors.yml
@@ -24,3 +24,7 @@ authors:
     description: Leader
     avatar: https://skylarbpayne.com/assets/images/profilepic.jpg
     url: https://skylarbpayne.com/
+  zenbase:
+    name: Zenbase
+    description: Partner
+    url: https://zenbase.ai/
