--- a/docs/writing/.authors.yml
+++ b/docs/writing/.authors.yml
@@ -28,3 +28,4 @@ authors:
     name: Zenbase
     description: Partner
     url: https://zenbase.ai/
+    avatar: https://media.licdn.com/dms/image/v2/D4E0BAQHK5G0AjgZrnA/company-logo_200_200/company-logo_200_200/0/1725335554542/zenbase_ai_logo?e=1745452800&v=beta&t=VCu196q1EkBGL2BZW3wHU2YzHTsHIMuIc6CFhZ-L-eM
