Update avatar URL for author Cyrus in authors YAML file

--- a/docs/writing/.authors.yml
+++ b/docs/writing/.authors.yml
@@ -27,7 +27,7 @@ authors:
   cyrus:
     name: Cyrus
     description: Zenbase
-    avatar: https://pbs.twimg.com/profile_images/1598732652445667330/ndmPqfJN_400x400.jpg
+    avatar: https://bookface-images.s3.amazonaws.com/avatars/d576d4346acbf45fbb4ae0aadba7a8c33c73e92e.jpg
     url: https://x.com/cyrusnewday 
   amir:
     name: Amir
