Add skip_ci_warning option to RSS plugin in mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -130,6 +130,7 @@ plugins:
   - social
   - rss:
       match_path: "writing/posts/.*"
+      skip_ci_warning: true
   - search:
       separator: '[\s\u200b\-_,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
   - minify:
