Add LinkedIn link to site footer

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -161,6 +161,8 @@ extra:
       link: https://twitter.com/jxnlco
     - icon: fontawesome/brands/github
       link: https://github.com/jxnl
+    - icon: fontawesome/brands/linkedin
+      link: https://www.linkedin.com/in/jxnl
 extra_css:
   - stylesheets/extra.css
 extra_javascript:
